# CVDL_HW1-5

./: .gitignore  pyproject.toml  setup.cfg
src/module/: display.py  gui.py  train.py
