[tool.poetry]
name = "cvdl_hw1-5"
version = "0.1.0"
description = ""
authors = ["arashi87 <arasi27676271@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
tensorflow = "^2.7.0"
numpy = "^1.21.4"
opencv-python = "^4.5.4"
matplotlib = "^3.5.0"
PyQt5 = "^5.15.6"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
